--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
     </dependencies>
 
     <build>
+        <finalName>mybatis</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
